  * Weather.com stations db is default now
  * Fixed bug #5975 "Update weather" <information banner> should be "Updating weather"
  * Fixed bug #5986 "No auto-updates via gsm network"
  * Fixed bug #6226 "Add Polish translation"
  * Fixed bug #5977 "Settings buttons should have left aligned text"
  * Fixed bug #5878 "problem with widgets layout"

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 28 Nov 2009 18:18:11 +0200

omweather (0.24.8) unstable; urgency=low

  * Removed mawk,awk depending
  * Removed button 'OK' in dialog "About" for Femantle
  * Changed description in debian/control file

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 25 Oct 2009 14:19:20 +0200

omweather (0.24.7) unstable; urgency=low

  * Fixed bug in UI "If city with long names are set in Station 1 and
    Station 2, the settings dialog moves the Station 4 box to the right and almost off the screen.(http://www.tinypic.com/r/2h5uvcj/4)"
  * Fixed bug #5627 "Missing strings for localization"
  * Fixed problem with stations which include symbol "'" in the name
  * Fixed small memory leak in settings window
  * Fixed bug #5591 "Sunrise and sunset is not correct on detailed view"
  * Fixed layouts "Now, today and tommorow"  and "Now + e days vert."
  * Fixed critical bug #5747 "OMWeather applet crashes when "Widget style" button is used"

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 25 Oct 2009 12:17:20 +0200

omweather (0.24.6) unstable; urgency=low

  * Fixed problem with GPS for Fremantle
  * Fixed bug with null icons on display if iconset was deinstalled from system
  * Done optified
  * Fixed problem with the text/button layout in the Update settings
  * Fixed problem with long strings in popup window for non Engligh Languages
  * Fixed some untranslated strings
  * Fixed bug #5363 "Theming bugs on buttons in settings and Forecast"
  * Fixed bug #5473 for omweather package "Small icon for all OMweather packages in application manager"
  * Updated Finish, Russian, French, Germany translations